--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
      <header class="header"> 
@@ -174,6 +173,6 @@
     
 </div>
 </footer>
-    <script src="js/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
