--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 </h1>
                 <div class="header__content-images">
                     <img class='content-item color--blue content-item__active'src="images/airpods-blue.png" alt="">
-                    <img class='content-item color--green'src="images/airpods-green.png" alt=""> 
-                    <img class='content-item color--black'src="images/airpods-grey.png" alt=""> 
-                    <img class='content-item color--pink'src="images/airpods-pink.png" alt="">
-                    <img class='content-item color--grey'src="images/airpods-silver.png" alt="">
+                    <img class='content-item color--green'src="./img/airpods-green.png" alt=""> 
+                    <img class='content-item color--black'src="./img/airpods-grey.png" alt=""> 
+                    <img class='content-item color--pink'src="./img/airpods-pink.png" alt="">
+                    <img class='content-item color--grey'src="./img/airpods-silver.png" alt="">
                 </div>
             </div>
         </div> 
